--- a/LeagueManagement/Views/Schedules/Index.cshtml
+++ b/LeagueManagement/Views/Schedules/Index.cshtml
@@ -4,103 +4,113 @@
     ViewBag.Title = "Index";
 }
 
-
 <div class="col-md-12 col-sm-12 mininumheight">
     <div class="table-responsive">
-        <div class="form-group">
+        <div class="col-md-12 col-sm-12 mininumheight">
 
-            <b> @Html.ActionLink("Add New Schedule", "Create", new { htmlAttributes = new { @class = "col-sm-12 control-label back" } })</b>
-
-        </div>
-        <table class="col-md-12 table-bordered table-striped table-condensed cf">
-            <thead class="cf">
-                <tr>
-                    <th class="numeric">
-                        @Html.DisplayNameFor(model => model.GroundId)
-                    </th>
-                    <th class="numeric">
-                        @Html.DisplayNameFor(model => model.SeasonId)
-                    </th>
-
-                    <th class="numeric">
-                        @Html.DisplayNameFor(model => model.HomeTeamId)
-                    </th>
-                    <th class="numeric">
-                        @Html.DisplayNameFor(model => model.VisitorTeamId)
-                    </th>
-                    <th>
-                            @Html.DisplayNameFor(model => model.UmpireId)
-                        </th>
-
-                    <th class="numeric">
-                        @Html.DisplayNameFor(model => model.ScheduleDate)
-                    </th>
-                    <th class="numeric">
-                        @Html.DisplayNameFor(model => model.StartTime)
-                    </th>
-                    <th class="numeric">
-                        @Html.DisplayNameFor(model => model.EndTime)
-                    </th>                 
-                    <th></th>
-
-                </tr>
-            </thead>
-            @foreach (var item in Model)
+            @if (User.IsInRole("Admin"))
             {
-                <tbody>
-                    <tr>
-                        <td class="numeric">
-                            @Html.ActionLink(item.Ground.Name, "Details", "Grounds", new { id = item.Ground.Id }, null)
-                            
-                          
-                        </td>
-                        <td class="numeric">
-                            @Html.DisplayFor(modelItem => item.Season.Name)
-                        </td>
+                <div class="register">
+                    <b> @Html.ActionLink("Add New Schedule", "Create", new { htmlAttributes = new { @class = "col-sm-12 control-label back" } })</b>
 
-                        <td class="numeric">
-                            @Html.ActionLink(item.Team.Name, "Details", "Teams", new { id = item.Team.Id }, null)
-                        </td>
-                        <td class="numeric">
-                            @Html.ActionLink(item.Team1.Name, "Details", "Teams", new { id = item.Team1.Id }, null)
-                        </td>
-                        <td class="numeric">
-                            @Html.ActionLink(item.Umpire.UserName, "Details", "Upmires", new { id = item.Umpire.Id }, null)
-                          
-                        </td>
-                        <td class="numeric">
-                            @Html.DisplayFor(modelItem => item.ScheduleDate)
-                        </td>
-                        
-                        <td class="numeric">
-                            @Html.DisplayFor(modelItem => item.StartTime)
-                        </td>
-                        <td class="numeric">
-                            @Html.DisplayFor(modelItem => item.EndTime)
-                        </td>
-                     
-                       @if (User.IsInRole("Admin"))
-                       {
-                        <td class="numeric">                           
-                            @Html.ActionLink("View Details", "Details", new { id = item.Id }) |
-                           
-                            @Html.ActionLink("Edit", "Edit", new { id = item.Id }) 
-                            |
-                            @Html.ActionLink("Delete", "Delete", new { id = item.Id }) 
-                                                                                                            
-                        </td>
-                       }
+                </div>
+            }
+            <div class="table-responsive">
+                <table class="table table-bordred table-striped">
+                    <thead class="cf">
+                        <tr>
+                            <th class="numeric">
+                                @Html.DisplayNameFor(model => model.GroundId)
+                            </th>
+                            <th class="numeric">
+                                @Html.DisplayNameFor(model => model.SeasonId)
+                            </th>
 
-                       else
-                       {
-                        <td class="numeric">
-                            @Html.ActionLink("View Details", "Details", new { id = item.Id })
+                            <th class="numeric">
+                                @Html.DisplayNameFor(model => model.HomeTeamId)
+                            </th>
+                            <th class="numeric">
+                                @Html.DisplayNameFor(model => model.VisitorTeamId)
+                            </th>
+                            <th>
+                                @Html.DisplayNameFor(model => model.UmpireId)
+                            </th>
 
-                        </td>
-                       }
-                    </tr>
-                </tbody>    
-                            }
-        </table>
+                            <th class="numeric">
+                                @Html.DisplayNameFor(model => model.ScheduleDate)
+                            </th>
+                            <th class="numeric">
+                                @Html.DisplayNameFor(model => model.StartTime)
+                            </th>
+                            <th class="numeric">
+                                @Html.DisplayNameFor(model => model.EndTime)
+                            </th>
+                            <th></th>
+
+                        </tr>
+                    </thead>
+                    <tbody>
+                        @foreach (var item in Model)
+                        {
+                            <tr>
+                                <td class="numeric">
+                                    @Html.ActionLink(item.Ground.Name, "Detail", "Grounds", new { id = item.Ground.Id }, new { target = "_blank" })
+                                </td>
+                                <td class="numeric">
+                                    @Html.DisplayFor(modelItem => item.Season.Name)
+                                </td>
+                                <td class="numeric">
+                                    @Html.ActionLink(item.Team.Name, "Detail", "Teams", new { id = item.Team.Id }, new { target = "_blank" })
+                                </td>
+                                <td class="numeric">
+                                    @Html.ActionLink(item.Team1.Name, "Detail", "Teams", new { id = item.Team1.Id }, new { target = "_blank" })
+                                </td>
+                                <td class="numeric">
+                                    @Html.ActionLink(item.Umpire.UserName, "Detail", "Umpires", new { id = item.Umpire.Id }, new { target = "_blank" })
+                                </td>
+                                <td class="numeric">
+                                    @Html.DisplayFor(modelItem => item.ScheduleDate)
+                                </td>
+                                <td class="numeric">
+                                    @Html.DisplayFor(modelItem => item.StartTime)
+                                </td>
+                                <td class="numeric">
+                                    @Html.DisplayFor(modelItem => item.EndTime)
+                                </td>
+
+
+                                @if (User.IsInRole("Admin"))
+                                {
+                                    <td class="numeric">
+                                        <a href="@Url.Action("Details", new {id = item.Id})">
+                                            <i class="glyphicon glyphicon-eye-open btn btn-primary btn-xs"></i>
+                                            <span class="sr-only">Details</span>
+                                        </a>
+                                        <a href="@Url.Action("Edit", new {id = item.Id})">
+                                            <i class="glyphicon glyphicon-edit btn btn-primary btn-xs"></i>
+                                            <span class="sr-only">Edit</span>
+                                        </a>
+                                        <a href="@Url.Action("Delete", new {id = item.Id})">
+                                            <i class="glyphicon glyphicon-trash btn btn-danger btn-xs"></i>
+                                            <span class="sr-only">Delete</span>
+                                        </a>
+                                    </td>
+                                }
+
+                                else
+                                {
+                                    <td class="numeric">
+                                        <a href="@Url.Action("Details", new {id = item.Id})">
+                                            <i class="glyphicon glyphicon-eye-open btn btn-primary btn-xs"></i>
+                                            <span class="sr-only">Details</span>
+                                        </a>
+                                    </td>
+                                }
+                            </tr>
+                        }
+                    </tbody>
+                </table>
+            </div>
+        </div>
     </div>
-    </div>
+</div>
