--- a/LeagueManagement/Views/Grounds/Details.cshtml
+++ b/LeagueManagement/Views/Grounds/Details.cshtml
@@ -15,7 +15,7 @@
             <div class="form-horizontal team">
 
                 <div class="form-group">
-                    <label for="inputEmail3" class="col-sm-4 control-label">
+                    <label class="col-sm-4 control-label">
 
                         @Html.DisplayNameFor(model => model.Name)
 
@@ -28,7 +28,7 @@
                 </div>
 
                 <div class="form-group">
-                    <label for="inputEmail3" class="col-sm-4 control-label">
+                    <label class="col-sm-4 control-label">
 
                         @Html.DisplayNameFor(model => model.Address)
                     </label>
@@ -41,7 +41,7 @@
 
 
                 <div class="form-group">
-                    <label for="inputEmail3" class="col-sm-4 control-label">
+                    <label class="col-sm-4 control-label">
 
                         @Html.DisplayNameFor(model => model.Directions)
                     </label>
@@ -57,7 +57,10 @@
                 <div class="col-md-offset-4 col-md-10">
                     <div class="register">
                         @Html.ActionLink("Back", "Index")
-                        @Html.ActionLink("Edit", "Edit", new { id = Model.Id })
+                        @if (User.IsInRole("Admin"))
+                        {
+                            @Html.ActionLink("Edit", "Edit", new { id = Model.Id })
+                        }
                     </div>
                 </div>
             </div>
