--- a/LeagueManagement/Views/Schedules/Details.cshtml
+++ b/LeagueManagement/Views/Schedules/Details.cshtml
@@ -91,7 +91,7 @@
                             @Html.ActionLink("Back", "Index")
                             @if (User.IsInRole("Admin"))
                             {
-                           @Html.ActionLink("Edit Schedule", "Edit", new { id = Model.Id })
+                           @Html.ActionLink("Edit", "Edit", new { id = Model.Id })
                             }
                         </div>
                     </div>
