--- a/LeagueManagement/Views/Schedules/Edit.cshtml
+++ b/LeagueManagement/Views/Schedules/Edit.cshtml
@@ -24,9 +24,6 @@
                         @Html.ValidationMessageFor(model => model.SeasonId, "", new { @class = "text-danger" })
                     </div>
                 </div>
-
-
-
                 <div class="form-group">
                     @Html.LabelFor(model => model.HomeTeamId, "HomeTeamId", htmlAttributes: new { @class = "col-sm-4 control-label" })
                     <div class="col-md-8">
@@ -46,7 +43,7 @@
                 <div class="form-group">
                     @Html.LabelFor(model => model.UmpireId, htmlAttributes: new { @class = "col-sm-4 control-label" })
                     <div class="col-md-8">
-                        @Html.DropDownList("Umpires",null,  htmlAttributes: new { @class = "form-control" })
+                        @Html.DropDownListFor(model => model.UmpireId, ViewBag.Umpires as IEnumerable<SelectListItem>, "Please Select", htmlAttributes: new { @class = "form-control" })
                         @Html.ValidationMessageFor(model => model.UmpireId, "", new { @class = "text-danger" })
                     </div>
                 </div>
