--- a/LeagueManagement/Views/Seasons/Details.cshtml
+++ b/LeagueManagement/Views/Seasons/Details.cshtml
@@ -3,33 +3,32 @@
 @{
     ViewBag.Title = "Details";
 }
-
 <div class="col-md-8 col-sm-6 mininumheight">
-
-    <div id="loginbox" style="margin-top: 10px;" class="mainbox col-md-7 col-md-offset-1 col-sm-9">
+    <div id="loginbox" style="margin-top:10px;" class="mainbox col-md-9 col-md-offset-1 col-sm-9">
         <h2>Season Details</h2>
         <hr />
         <div class="form-horizontal team">
             <div class="form-group">
-                <label for="inputEmail3" class="col-sm-4 control-label">
-                    @Html.LabelFor(model => model.LeagueId, htmlAttributes: new { @class = "col-sm-4 control-label" })
+                <label class="col-sm-4 control-label">
+                    @Html.DisplayNameFor(model => model.Name)
+                </label> <div class="col-sm-8">
+                    @Html.DisplayFor(model => model.Name)
+                </div>
+            </div>
+            <div class="form-group">
+                <label class="col-sm-4 control-label">
+                    @Html.LabelFor(model => model.LeagueId)
                 </label>
                 <div class="col-sm-8">
                     @Html.DisplayFor(model => model.League.Name)
                 </div>
             </div>
             <div class="form-group">
-                <label for="inputEmail3" class="col-sm-4 control-label">
-                    @Html.LabelFor(model => model.OrganizationId, htmlAttributes: new { @class = "col-sm-4 control-label" })
-                </label> <div class="col-sm-8">
+                <label class="col-sm-4 control-label">
+                    @Html.LabelFor(model => model.OrganizationId)
+                </label>
+                <div class="col-sm-8">
                     @Html.DisplayFor(model => model.Organization.Name)
-                </div>
-            </div>
-            <div class="form-group">
-                <label for="inputEmail3" class="col-sm-4 control-label">
-                    @Html.DisplayNameFor(model => model.Name)
-                </label> <div class="col-sm-8">
-                    @Html.DisplayFor(model => model.Name)
                 </div>
             </div>
 
@@ -37,7 +36,10 @@
                 <div class="col-md-offset-4 col-md-10">
                     <div class="register">
                         @Html.ActionLink("Back", "Index")
-                        @Html.ActionLink("Edit Season", "Edit", new { id = Model.Id })
+                        @if (User.IsInRole("Admin"))
+                        {
+                            @Html.ActionLink("Edit Season", "Edit", new { id = Model.Id })
+                        }
                     </div>
                 </div>
             </div>
