--- a/LeagueManagement/Views/Shared/_Layout.cshtml
+++ b/LeagueManagement/Views/Shared/_Layout.cshtml
@@ -50,16 +50,11 @@
                             </div>
                             @Html.Partial("_LoginPartial")
                         </div><!-- /social -->
-
-
-
                     </div>
-
                     <!-- Logo -->
-                    <a class="logo"href="@Url.Action("Index", "Home")">
+                    <a class="logo" href="@Url.Action("Index", "Home")">
                         <img src="~/images/logo.png" alt="logo">
                     </a>
-
                 </div><!-- /.container -->
             </header>
             <!-- /Top Bar -->
@@ -79,42 +74,37 @@
                     </div>
                     <div id="navbar" class="navbar-collapse collapse">
                         <ul class="nav navbar-nav">
-                            <li>@Html.ActionLink("Home","Index","Home")</li>
-                            <li>@Html.ActionLink("Schedule","Index","Schedules")</li>                            
-                            <li class="dropdown">
-                                <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Teams </span></a>                              
-                                <ul class="dropdown-menu">
-                                    <li>@Html.ActionLink("Teams", "Index", "Teams")</li>
-                                    <li>@Html.ActionLink("Team Members", "Index", "TeamMembers")</li>                                  
-                                </ul>
-                            </li>
-                            <li class="dropdown">
-                                @Html.ActionLink("Umpires","Index","Umpires")                              
-                            </li>
-                            <li class="dropdown">
-                                @Html.ActionLink("Grounds","Index","Grounds")                              
-                            </li>
-                            <li class="dropdown">
-                                @Html.ActionLink("Season", "Index", "Seasons")
-                               
-                            </li>
-                            <li class="dropdown">
-                                @Html.ActionLink("League", "Index", "Leagues")
-                            </li>
-                           
-                        </ul>
+                            <li class="@(ViewContext.RouteData.Values["Controller"].ToString() == "Home" ? "active" : "")">@Html.ActionLink("Home", "Index", "Home")</li>
+                            <li class="@(ViewContext.RouteData.Values["Controller"].ToString() == "Schedules" ? "active" : "")">@Html.ActionLink("Schedule", "Index", "Schedules")</li>
+                            <li class="@(ViewContext.RouteData.Values["Controller"].ToString() == "Teams" ? "active" : "")">@Html.ActionLink("Teams", "Index", "Teams")</li>
+                            <li class="@(ViewContext.RouteData.Values["Controller"].ToString() == "Umpires" ? "active" : "")">@Html.ActionLink("Umpires", "Index", "Umpires")</li>
+                            <li class="@(ViewContext.RouteData.Values["Controller"].ToString() == "Grounds" ? "active" : "")">@Html.ActionLink("Grounds", "Index", "Grounds")</li>
+                            <li class="@(ViewContext.RouteData.Values["Controller"].ToString() == "Seasons" ? "active" : "")">@Html.ActionLink("Season", "Index", "Seasons")</li>
+                            <li class="@(ViewContext.RouteData.Values["Controller"].ToString() == "Leagues" ? "active" : "")">@Html.ActionLink("League", "Index", "Leagues")</li>
 
+                            
+                            @*<li>@Html.ActionLink("Home", "Index", "Home")</li>
+    <li>@Html.ActionLink("Schedule", "Index", "Schedules")</li>
+    <li>@Html.ActionLink("Teams", "Index", "Teams")</li>
+    <li>@Html.ActionLink("Umpires", "Index", "Umpires")</li>
+    <li>@Html.ActionLink("Grounds", "Index", "Grounds")</li>
+    <li>@Html.ActionLink("Season", "Index", "Seasons")</li>
+    <li>@Html.ActionLink("League", "Index", "Leagues")</li>*@
+                            <li>
+                                @if (Request.IsAuthenticated)
+                                {
+                                    @Html.ActionLink("Update Profile", "UpdateProfile", "Users", null, null)
+                                }
+                            </li>
+                        </ul>
                     </div>
                 </div>
             </nav>
-
-
         </div>
-
         <div class="container">
-           <div class="row">
-               @RenderBody()
-           </div>
+            <div class="row">
+                @RenderBody()
+            </div>
 
         </div>
         <section class="footer">
@@ -122,7 +112,7 @@
                 <div class="col-md-8 col-sm-8">
                     <ul class="footermenu">
                         <li><a href="#">SITEMAP | </a></li>
-                        <li><a href="#"> FEEDBACK | </a></li>                       
+                        <li><a href="#"> FEEDBACK | </a></li>
                         <li><a href="#"> ABOUT US | </a></li>
                         <li><a href="#"> PRIVACY POLICY | </a></li>
                         <li><a href="#"> TERMS OF USE</a></li>
@@ -306,20 +296,20 @@
     <!-- Include all compiled plugins (below), or include individual files as needed -->
     <script src="~/js/bootstrap.min.js"></script>
     <script>
-	$(document).ready(function(){
-    $(".dropdown").hover(
-        function() {
-            $('.dropdown-menu', this).stop( true, true ).slideDown("fast");
-            $(this).toggleClass('open');
-        },
-        function() {
-            $('.dropdown-menu', this).stop( true, true ).slideUp("fast");
-            $(this).toggleClass('open');
-        }
-    );
-});</script>
+        $(document).ready(function () {
+            $(".dropdown").hover(
+                function () {
+                    $('.dropdown-menu', this).stop(true, true).slideDown("fast");
+                    $(this).toggleClass('open');
+                },
+                function () {
+                    $('.dropdown-menu', this).stop(true, true).slideUp("fast");
+                    $(this).toggleClass('open');
+                }
+            );
+        });</script>
 
-   
+
 </body>
 @Scripts.Render("~/bundles/bootstrap")
 @RenderSection("scripts", required: false)
