--- a/LeagueManagement/Views/Umpires/Index.cshtml
+++ b/LeagueManagement/Views/Umpires/Index.cshtml
@@ -4,59 +4,81 @@
     ViewBag.Title = "Index";
 }
 
-
-
 <div class="col-md-12 col-sm-12 mininumheight">
     <div class="table-responsive">
-        <div class="form-group">
-            <h1>Umpires</h1>
-            <b> @Html.ActionLink("Add New Umpire", "Create", new { htmlAttributes = new { @class = "col-sm-12 control-label back" } })</b>
-
-        </div>
-        <table class="col-md-12 table-bordered table-striped table-condensed cf">
-            <thead class="cf">
-                <tr>
-                    <th>
-                        @Html.DisplayNameFor(model => model.FirstName)
-                    </th>
-                    <th>
-                        @Html.DisplayNameFor(model => model.LastName)
-                    </th>
-
-                    <th>
-                        @Html.DisplayNameFor(model => model.User1.PhoneNumber)
-                    </th>
-                    <th>
-                        @Html.DisplayNameFor(model => model.User1.EmailId)
-                    </th>
-                    <th></th>
-                </tr>
-            </thead>
-
-            @foreach (var item in Model)
+        <div class="col-md-12 col-sm-12 mininumheight">
+            @if (User.IsInRole("Admin"))
             {
-                <tbody>
-                    <tr>
-                        <td>
-                            @Html.DisplayFor(modelItem => item.FirstName)
-                        </td>
-                        <td>
-                            @Html.DisplayFor(modelItem => item.LastName)
-                        </td>
-                        <td>
-                            @Html.DisplayFor(modelItem => item.PhoneNumber)
-                        </td>
-                        <td>
-                            @Html.DisplayFor(modelItem => item.EmailId)
-                        </td>
-                        
-                        <td>
-                            @Html.ActionLink("Details", "Details", new { id = item.Id }) |
-                            @Html.ActionLink("Delete", "Delete", new { id = item.Id })
-                        </td>
-                    </tr>
-                </tbody>
+                <div class="register">
+                    <b> @Html.ActionLink("Add New Umpire", "Create", new { htmlAttributes = new { @class = "col-sm-12 control-label back" } })</b>
+                </div>
             }
-        </table>
+            <div class="table-responsive">
+                <table class="table table-bordred table-striped">
+                    <thead class="cf">
+                        <tr>
+                            <th>
+                                @Html.DisplayNameFor(model => model.FirstName)
+                            </th>
+                            <th>
+                                @Html.DisplayNameFor(model => model.LastName)
+                            </th>
+
+                            <th>
+                                @Html.DisplayNameFor(model => model.PhoneNumber)
+                            </th>
+                            <th>
+                                @Html.DisplayNameFor(model => model.EmailId)
+                            </th>
+                            <th></th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        @foreach (var item in Model)
+                        {
+                            <tr>
+                                <td>
+                                    @Html.DisplayFor(modelItem => item.FirstName)
+                                </td>
+                                <td>
+                                    @Html.DisplayFor(modelItem => item.LastName)
+                                </td>
+                                <td>
+                                    @Html.DisplayFor(modelItem => item.PhoneNumber)
+                                </td>
+                                <td>
+                                    @Html.DisplayFor(modelItem => item.EmailId)
+                                </td>
+
+                                @if (User.IsInRole("Admin"))
+                                {
+                                    <td class="numeric">
+                                        <a href="@Url.Action("Details", new {id = item.Id})">
+                                            <i class="glyphicon glyphicon-eye-open btn btn-primary btn-xs"></i>
+                                            <span class="sr-only">Details</span>
+                                        </a>
+                                        <a href="@Url.Action("Delete", new {id = item.Id})">
+                                            <i class="glyphicon glyphicon-trash btn btn-danger btn-xs"></i>
+                                            <span class="sr-only">Delete</span>
+                                        </a>
+                                    </td>
+                                }
+
+                                else
+                                {
+                                    <td class="numeric">
+                                        <a href="@Url.Action("Details", new {id = item.Id})">
+                                            <i class="glyphicon glyphicon-eye-open btn btn-primary btn-xs"></i>
+                                            <span class="sr-only">Details</span>
+                                        </a>
+                                    </td>
+                                }
+                            </tr>
+
+                        }
+                    </tbody>
+                </table>
+            </div>
+        </div>
     </div>
 </div>
