--- a/LeagueManagement/Views/Users/Delete.cshtml
+++ b/LeagueManagement/Views/Users/Delete.cshtml
@@ -28,11 +28,11 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.User1.EmailId)
+            @Html.DisplayNameFor(model => model.EmailId)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.User1.EmailId)
+            @Html.DisplayFor(model => model.EmailId)
         </dd>
 
         <dt>
@@ -91,22 +91,175 @@
             @Html.DisplayFor(model => model.ProfilePhoto)
         </dd>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.CreatedOn)
-        </dt>
+        <div class="form-group">
+            <label for="inputEmail3" class="col-sm-4 control-label">
+                @Html.DisplayNameFor(model => model.NickName)
+            </label><div class="col-sm-8">
 
-        <dd>
-            @Html.DisplayFor(model => model.CreatedOn)
-        </dd>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.ModifiedOn)
-        </dt>
+                @Html.DisplayFor(model => model.NickName)
+            </div>
+        </div>
 
-        <dd>
-            @Html.DisplayFor(model => model.ModifiedOn)
-        </dd>
+        <div class="form-group">
+            <label for="inputEmail3" class="col-sm-4 control-label">
+                @Html.DisplayNameFor(model => model.Birthday)
+            </label><div class="col-sm-8">
 
+
+                @Html.DisplayFor(model => model.Birthday)
+            </div>
+        </div>
+
+        <div class="form-group">
+            <label for="inputEmail3" class="col-sm-4 control-label">
+                @Html.DisplayNameFor(model => model.PlaceofBirth)
+            </label><div class="col-sm-8">
+
+
+                @Html.DisplayFor(model => model.PlaceofBirth)
+            </div>
+        </div>
+
+        <div class="form-group">
+            <label for="inputEmail3" class="col-sm-4 control-label">
+                @Html.DisplayNameFor(model => model.LivedInUSAsince)
+            </label><div class="col-sm-8">
+
+
+                @Html.DisplayFor(model => model.LivedInUSAsince)
+            </div>
+        </div>
+
+        <div class="form-group">
+            <label for="inputEmail3" class="col-sm-4 control-label">
+                @Html.DisplayNameFor(model => model.SchoolName)
+            </label><div class="col-sm-8">
+
+
+                @Html.DisplayFor(model => model.SchoolName)
+            </div>
+        </div>
+
+        <div class="form-group">
+            <label for="inputEmail3" class="col-sm-4 control-label">
+                @Html.DisplayNameFor(model => model.Grade)
+            </label><div class="col-sm-8">
+
+
+                @Html.DisplayFor(model => model.Grade)
+            </div>
+        </div>
+
+        <div class="form-group">
+            <label for="inputEmail3" class="col-sm-4 control-label">
+                @Html.DisplayNameFor(model => model.BattingStyle)
+            </label><div class="col-sm-8">
+
+
+                @Html.DisplayFor(model => model.BattingStyle)
+            </div>
+        </div>
+
+        <div class="form-group">
+            <label for="inputEmail3" class="col-sm-4 control-label">
+                @Html.DisplayNameFor(model => model.FavouriteShot)
+            </label><div class="col-sm-8">
+
+
+                @Html.DisplayFor(model => model.FavouriteShot)
+            </div>
+        </div>
+
+        <div class="form-group">
+            <label for="inputEmail3" class="col-sm-4 control-label">
+                @Html.DisplayNameFor(model => model.BowlingStyle)
+            </label><div class="col-sm-8">
+
+
+                @Html.DisplayFor(model => model.BowlingStyle)
+            </div>
+        </div>
+
+        <div class="form-group">
+            <label for="inputEmail3" class="col-sm-4 control-label">
+                @Html.DisplayNameFor(model => model.FavoriteCricketer)
+            </label><div class="col-sm-8">
+
+
+                @Html.DisplayFor(model => model.FavoriteCricketer)
+            </div>
+        </div>
+
+        <div class="form-group">
+            <label for="inputEmail3" class="col-sm-4 control-label">
+                @Html.DisplayNameFor(model => model.Likes)
+            </label><div class="col-sm-8">
+
+
+                @Html.DisplayFor(model => model.Likes)
+            </div>
+        </div>
+
+        <div class="form-group">
+            <label for="inputEmail3" class="col-sm-4 control-label">
+                @Html.DisplayNameFor(model => model.Dislikes)
+            </label><div class="col-sm-8">
+
+
+                @Html.DisplayFor(model => model.Dislikes)
+            </div>
+        </div>
+
+        <div class="form-group">
+            <label for="inputEmail3" class="col-sm-4 control-label">
+                @Html.DisplayNameFor(model => model.FavouriteFood)
+            </label><div class="col-sm-8">
+
+
+                @Html.DisplayFor(model => model.FavouriteFood)
+            </div>
+        </div>
+
+        <div class="form-group">
+            <label for="inputEmail3" class="col-sm-4 control-label">
+                @Html.DisplayNameFor(model => model.FavouriteMovie)
+            </label><div class="col-sm-8">
+
+
+                @Html.DisplayFor(model => model.FavouriteMovie)
+            </div>
+        </div>
+
+        <div class="form-group">
+            <label for="inputEmail3" class="col-sm-4 control-label">
+                @Html.DisplayNameFor(model => model.Ambition)
+            </label><div class="col-sm-8">
+
+
+                @Html.DisplayFor(model => model.Ambition)
+            </div>
+        </div>
+
+        <div class="form-group">
+            <label for="inputEmail3" class="col-sm-4 control-label">
+                @Html.DisplayNameFor(model => model.Hobbies)
+            </label><div class="col-sm-8">
+
+
+                @Html.DisplayFor(model => model.Hobbies)
+            </div>
+        </div>
+
+        @*<div class="form-group">
+            <label for="inputEmail3" class="col-sm-4 control-label">
+                @Html.DisplayNameFor(model => model.PhotoUrl)
+            </label><div class="col-sm-8">
+
+
+                @Html.DisplayFor(model => model.PhotoUrl)
+            </div>
+        </div>*@
     </dl>
 
     @using (Html.BeginForm()) {
