--- a/LeagueManagement/Views/TeamTitles/Index.cshtml
+++ b/LeagueManagement/Views/TeamTitles/Index.cshtml
@@ -4,60 +4,70 @@
     ViewBag.Title = "Index";
 }
 
-<h2>Index</h2>
+<div class="col-md-12 col-sm-12 mininumheight">
+    <div class="table-responsive">
+        <div class="col-md-12 col-sm-12 mininumheight">
+            @if (User.IsInRole("Admin"))
+            {
+                <div class="register">
+                    @Html.ActionLink("Add New TeamTitle", "Create", new { htmlAttributes = new { @class = "col-sm-12 control-label back" } })
+                </div>
+            }
+            <div class="table-responsive">
+                <table class="table table-bordred table-striped">
+                    <thead class="cf">
+                        <tr>
 
-<p>
-    @Html.ActionLink("Create New", "Create")
-</p>
-<table class="table">
-    <tr>
-        <th>
-            @Html.DisplayNameFor(model => model.OrganizationId)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Name)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.CreatedBy)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.CreatedOn)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.ModifiedBy)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.ModifiedOn)
-        </th>
-        <th></th>
-    </tr>
+                          
+                            <th>
+                                @Html.DisplayNameFor(model => model.Name)
+                            </th>
 
-@foreach (var item in Model) {
-    <tr>
-        <td>
-            @Html.DisplayFor(modelItem => item.OrganizationId)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Name)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.CreatedBy)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.CreatedOn)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.ModifiedBy)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.ModifiedOn)
-        </td>
-        <td>
-            @Html.ActionLink("Edit", "Edit", new { id=item.Id }) |
-            @Html.ActionLink("Details", "Details", new { id=item.Id }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.Id })
-        </td>
-    </tr>
-}
+                            <th></th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        @foreach (var item in Model)
+                        {
+                            <tr>
+                                
+                                <td>
+                                    @Html.DisplayFor(modelItem => item.Name)
+                                </td>
+                                @if (User.IsInRole("Admin"))
+                                {
+                                    <td class="numeric">
+                                        <a href="@Url.Action("Details", new {id = item.Id})">
+                                            <i class="glyphicon glyphicon-eye-open btn btn-primary btn-xs"></i>
+                                            <span class="sr-only">Details</span>
+                                        </a>
+                                        &nbsp;
+                                        <a href="@Url.Action("Edit", new {id = item.Id})">
+                                            <i class="glyphicon glyphicon-edit btn btn-primary btn-xs"></i>
+                                            <span class="sr-only">Edit</span>
+                                        </a>
+                                        &nbsp;
+                                        <a href="@Url.Action("Delete", new {id = item.Id})">
+                                            <i class="glyphicon glyphicon-trash btn btn-danger btn-xs"></i>
+                                            <span class="sr-only">Delete</span>
+                                        </a>
+                                    </td>
+                                }
 
-</table>
+                                else
+                                {
+                                    <td class="numeric">
+                                        <a href="@Url.Action("Details", new {id = item.Id})">
+                                            <i class="glyphicon glyphicon-eye-open btn btn-primary btn-xs"></i>
+                                            <span class="sr-only">Details</span>
+                                        </a>
+                                    </td>
+                                }
+                            </tr>
+                        }
+                    </tbody>
+                </table>
+            </div>
+        </div>
+    </div>
+</div>
